--- a/principal.html
+++ b/principal.html
@@ -40,7 +40,7 @@
                             <a href="mailto:dragon.lbsg.net@gmai.com"target="_blank"class="sub-link">Correo</a>
                         </li>
                         <li>
-                            <a href="#"target=""class="sub-link">Descarga esta Web</a>
+                            <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
                         </li>
                     </ul>
                     
