--- a/principal.html
+++ b/principal.html
@@ -91,8 +91,8 @@
                             <a href="https://youtube.com/playlist?list=PLbq9E5vE0hkThKFzEiHkpeelgQEF2YpH7"target="blank"rel="noreferrer noopener"class="link-extenser"> lista de reproducción programación</a> 
                         </li>
                         <li>
-                            <a height="#"class="link-extenser">descarga este proyecto</a>
-                        </li>
+                            <!--<a height="#"class="link-extenser">descarga este proyecto</a>
+                        </li>-->
                         </ul>
                     <hr>
                 </address>
