--- a/principal.html
+++ b/principal.html
@@ -43,6 +43,9 @@
                     
                 </li>
                 <li>
+                    <a>Cursos de programación</a>
+                </li>
+                <li>
                     <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
                 </li>
             </ul>
