--- a/principal.html
+++ b/principal.html
@@ -28,25 +28,23 @@
                     <a href="2pagina.html">Capacidad</a>
                 </li>
                 <li>
-                    <a href="#">Contactenos</a>
-                    <ul class="sub-nav-menu">
-                        <li>
-                            <a href="#"target="_blank"class="sub-link">WhatsApp</a>
-                        </li>
-                        <li>
-                            <a href="#"target="_blank"class="sub-link">FaceBook</a>
-                        </li>
-                        <li>
-                            <a href="mailto:dragon.lbsg.net@gmai.com"target="_blank"class="sub-link">Correo</a>
-                        </li>
+                    <a href="#">Cursos de programación</a>
+                    <ul>
+                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeB92ME1GFyeqDVOa-gL0Ybd"target="blank">Curso HTML</a></li>
+                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeDbvISffzihyxzqJBt_z3-Z"target="blank">Curso CSS</a></li>
                     </ul>
-                    
-                </li>
-                <li>
-                    <a>Cursos de programación</a>
                 </li>
                 <li>
                     <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
+                </li>
+                <li>
+                    <a href="#">Contactenos</a>
+                    <ul class="sub-nav-menu">
+                        <li><a href="#"target="_blank"class="sub-link">WhatsApp</a></li>
+                        <li><a href="#"target="_blank"class="sub-link">FaceBook</a></li>
+                        <li><a href="mailto:dragon.lbsg.net@gmai.com"target="_blank"class="sub-link">Correo</a></li>
+                    </ul>
+                    
                 </li>
             </ul>
             <ul>
