--- a/2pagina.html
+++ b/2pagina.html
@@ -18,7 +18,7 @@
     <body class="pagina">
         <header id="Encabezado">
             <h1>
-                <div align="center">Web de SantiagoRC 1102</div> 
+                <div align="center"class="titulo">Web de SantiagoRC 1102</div> 
             </h1>
         </header>
         <nav class="nav-web">
