--- a/no disponible.html
+++ b/no disponible.html
@@ -13,9 +13,13 @@
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <!--CUSTOM STYLES-->
         <link rel="stylesheet" href="css/universal.css">
-        <link rel="stylesheet" href="css/no-disponible.css>
+        <link rel="stylesheet" href="css/no-disponible.css">
     </head>
     <body>
-        <h1 class="error">Error</h1>
-        <p>Este link no se encuentra disponible en este momento</p>
+        <div class="error">
+            <div class="contant">
+                <h1>Error</h1>
+                <p>Este link no se encuentra disponible en este momento</p>
+            </div>
+        </div>
     </body>
