--- a/principal.html
+++ b/principal.html
@@ -40,9 +40,9 @@
                 <li>
                     <a href="#"class="apartado">Contactenos</a>
                     <ul class="sub-nav-menu">
-                        <li><a href="#"target="_blank"class="sub-link">WhatsApp</a></li>
+                        <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link">WhatsApp</a></li>
                         <li><a href="no disponible.html"target="_blank"class="sub-link">FaceBook</a></li>
-                        <li><a href="mailto:dragon.lbsg.net@gmai.com"target="_blank"class="sub-link">Correo</a></li>
+                        <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link">Correo</a></li>
                     </ul>
                     
                 </li>
