--- a/no disponible.html
+++ b/no disponible.html
@@ -15,11 +15,55 @@
         <link rel="stylesheet" href="css/universal.css">
         <link rel="stylesheet" href="css/no-disponible.css">
     </head>
-    <body>
+    <body class="pagina">
+        <header id="Encabezado">
+            <h1>
+                <div align="center"class="titulo">Web de SantiagoRC 1102</div> 
+            </h1>
+        </header>
+        <nav class="nav-web">
+            <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
+            <ul class="nav-menu">
+                <li>
+                    <a href="principal.html">Principal</a>
+                </li>
+                <li>
+                    <a href="#"class="apartado">Cursos de programación</a>
+                    <ul class="sub-nav-menu">
+                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeB92ME1GFyeqDVOa-gL0Ybd"target="blank">Curso HTML</a></li>
+                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeDbvISffzihyxzqJBt_z3-Z"target="blank">Curso CSS</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
+                </li>
+                <li>
+                    <a href="#"class="apartado">Contactenos</a>
+                    <ul class="sub-nav-menu">
+                        <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link">WhatsApp</a></li>
+                        <li><a href="no disponible.html"target="_blank"class="sub-link">FaceBook</a></li>
+                        <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link">Correo</a></li>
+                    </ul>
+                    
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fas fa-search"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <hr>
         <div class="error">
             <div class="contant">
                 <h1>Error</h1>
-                <p>Este link no se encuentra disponible en este momento</p>
+                <p>
+                    Este link no se encuentra disponible en este momento
+                </p>
+                <p>Por favor Ir a la pagina principal hasta que solucionemos este problema</p>
+                <a href="principal.html"id="Redirigir">Click Aquí</a>
             </div>
         </div>
     </body>
