--- a/2pagina.html
+++ b/2pagina.html
@@ -24,20 +24,27 @@
         <nav class="nav-web">
             <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
             <ul class="nav-menu">
-                <li> 
-                    <a href="principal.html">Principal</a><br> 
+                <li>
+                    <a href="principal.html">Principal</a>
                 </li>
                 <li>
-                    <a href="#">Contactenos</a>
+                    <a href="#"class="apartado">Cursos de programación</a>
+                    <ul class="sub-nav-menu">
+                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeB92ME1GFyeqDVOa-gL0Ybd"target="blank">Curso HTML</a></li>
+                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeDbvISffzihyxzqJBt_z3-Z"target="blank">Curso CSS</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
+                </li>
+                <li>
+                    <a href="#"class="apartado">Contactenos</a>
                     <ul class="sub-nav-menu">
                         <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link">WhatsApp</a></li>
                         <li><a href="no disponible.html"target="_blank"class="sub-link">FaceBook</a></li>
                         <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link">Correo</a></li>
                     </ul>
                     
-                </li>
-                <li>
-                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
                 </li>
             </ul>
             <ul>
@@ -49,3 +56,4 @@
             </ul>
         </nav>
         <hr>
+    </body>
