--- a/principal.html
+++ b/principal.html
@@ -64,7 +64,7 @@
                     Blanditiis, eveniet. Voluptatum, iusto? Et accusantium atque vel in facere, commodi eos vero quibusdam consectetur, libero aspernatur ratione.
                     Lorem ipsum dolor, sit amet consectetur adipisicing.
                 </p>
-                <img src="img/html+css o html.jpg"width="600"height="375"class="img-head">
+                <img src="img/esqueleto+nervios+piel.jpg"width="600"height="375"class="img-head">
                 <img src="img/html+css+js.jpg"width="600"height="375"class="img-head"/>
                 <img src="img/Screenshot_142.png"width="600"height="375"class="img-head"/>
                 <img src="img/Screenshot_145.png"width="600"height="375"class="img-head"/>
