--- a/no disponible.html
+++ b/no disponible.html
@@ -25,7 +25,7 @@
             <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
             <ul class="nav-menu">
                 <li>
-                    <a href="principal.html">Principal</a>
+                    <a href="index.html">Principal</a>
                 </li>
                 <li>
                     <a href="#"class="apartado">Cursos de programación</a>
@@ -63,7 +63,7 @@
                     Este link no se encuentra disponible en este momento
                 </p>
                 <p>Por favor Ir a la pagina principal hasta que solucionemos este problema</p>
-                <a href="principal.html"id="Redirigir">Click Aquí</a>
+                <a href="index.html"id="Redirigir">Click Aquí</a>
             </div>
         </div>
     </body>
