--- a/2pagina.html
+++ b/2pagina.html
@@ -32,7 +32,7 @@
                     <ul class="sub-nav-menu">
                             <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeB92ME1GFyeqDVOa-gL0Ybd"target="blank">Curso HTML</a></li>
                             <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeDbvISffzihyxzqJBt_z3-Z"target="blank">Curso CSS</a></li>
-                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeBAnmi0rqLkyZIAVmT5lZxG">Curso JavaScrip</a></li>
+                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeBAnmi0rqLkyZIAVmT5lZxG"target="blank">Curso JavaScrip</a></li>
                     </ul>
                 </li>
                 <li>
