--- a/no disponible.html
+++ b/no disponible.html
@@ -23,7 +23,7 @@
                     Este link no se encuentra disponible en este momento
                 </p>
                 <p>Por favor Ir a la pagina principal hasta que solucionemos este problema</p>
-                <a href="index.html"id="Redirigir">Click Aquí</a>
+                <a href="http://www.santiago1102.ml"id="Redirigir">Click Aquí</a>
             </div>
         </div>
     </body>
