--- a/2pagina.html
+++ b/2pagina.html
@@ -25,7 +25,7 @@
             <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
             <ul class="nav-menu">
                 <li>
-                    <a href="index.html">Principal</a>
+                    <a href="http://www.santiago1102.ml">Principal</a>
                 </li>
                 <li>
                     <a href="#"class="apartado">Cursos de programación</a>
