--- a/capacitacion.html
+++ b/capacitacion.html
@@ -18,7 +18,7 @@
     <body class="pagina">
         <header id="Encabezado">
             <h1>
-                <div align="center"class="titulo">Web de SantiagoRC 1102</div> 
+                <div align="center"class="titulo">Capacitación</div> 
             </h1>
         </header>
         <nav class="nav-web">
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
+                    <!-- <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a> -->
                 </li>
                 <li>
                     <a href="#"class="apartado">Contactenos</a>
