--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
                             <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeBAnmi0rqLkyZIAVmT5lZxG"target="blank">Curso JavaScrip</a></li>
                     </ul>
                 </li>
-                <li>
-                    <!-- <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a> -->
-                </li>
+                <li><a href="#2-time">Otro apartado</a></li>
                 <li>
                     <a href="#"class="apartado">Contactenos</a>
                     <ul class="sub-nav-menu">
@@ -45,7 +43,9 @@
                         <li><a href="no disponible.html"target="_blank"class="sub-link">FaceBook</a></li>
                         <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link">Correo</a></li>
                     </ul>
-                    
+                </li>
+                <li>
+                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
                 </li>
             </ul>
             <ul>
