--- a/capacitacion.html
+++ b/capacitacion.html
@@ -36,9 +36,6 @@
                     </ul>
                 </li>
                 <li>
-                    <!-- <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a> -->
-                </li>
-                <li>
                     <a href="#"class="apartado">Contactenos</a>
                     <ul class="sub-nav-menu">
                         <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link">WhatsApp</a></li>
@@ -46,6 +43,9 @@
                         <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link">Correo</a></li>
                     </ul>
                     
+                </li>
+                <li>
+                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
                 </li>
             </ul>
             <ul>
