--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         <nav class="nav-web">
             <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
             <ul class="nav-menu">
-                <li>
-                    <a href="capacitacion.html">Capacitación</a>
-                </li>
+                <li><a href="capacitacion.html">Capacitación</a></li>
                 <li>
                     <a href="#"class="apartado">Cursos de programación</a>
                     <ul class="sub-nav-menu">
@@ -35,7 +33,10 @@
                             <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeBAnmi0rqLkyZIAVmT5lZxG"target="blank">Curso JavaScrip</a></li>
                     </ul>
                 </li>
-                <li><a href="#2-time">Otro apartado</a></li>
+                <li><a href="#2-time"></a>Otro apartado</li>
+                <li>
+                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
+                </li>
                 <li>
                     <a href="#"class="apartado">Contactenos</a>
                     <ul class="sub-nav-menu">
@@ -43,9 +44,6 @@
                         <li><a href="no disponible.html"target="_blank"class="sub-link">FaceBook</a></li>
                         <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link">Correo</a></li>
                     </ul>
-                </li>
-                <li>
-                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
                 </li>
             </ul>
             <ul>
