--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                             <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeBAnmi0rqLkyZIAVmT5lZxG"target="blank">Curso JavaScrip</a></li>
                     </ul>
                 </li>
-                <li><a href="2-time"></a>Otro apartado</li>
-                
+                <li><a href="#2-time">Otro apartado</a></li>
                 <li>
                     <a href="#"class="apartado">Contactenos</a>
                     <ul class="sub-nav-menu">
