--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="nav-menu">
                 <li><a href="capacitacion.html">Capacitación</a></li>
                 <li>
-                    <a href="#"class="apartado">Cursos de programación</a>
+                    <a href=""class="apartado">Cursos de programación</a>
                     <ul class="sub-nav-menu">
                             <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeB92ME1GFyeqDVOa-gL0Ybd"target="blank">Curso HTML</a></li>
                             <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeDbvISffzihyxzqJBt_z3-Z"target="blank">Curso CSS</a></li>
@@ -35,7 +35,7 @@
                 </li>
                 <li><a href="#2-time">Otro apartado</a></li>
                 <li>
-                    <a href="#"class="apartado">Contactenos</a>
+                    <a href=""class="apartado">Contactenos</a>
                     <ul class="sub-nav-menu">
                         <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link">WhatsApp</a></li>
                         <li><a href="no disponible.html"target="_blank"class="sub-link">FaceBook</a></li>
