--- a/capacitacion.html
+++ b/capacitacion.html
@@ -28,7 +28,7 @@
                     <a href="http://www.santiago1102.ml">Principal</a>
                 </li>
                 <li>
-                    <a href="#"class="apartado">Cursos de programación</a>
+                    <a href="#"class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
                     <ul class="sub-nav-menu">
                             <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeB92ME1GFyeqDVOa-gL0Ybd"target="blank">Curso HTML</a></li>
                             <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeDbvISffzihyxzqJBt_z3-Z"target="blank">Curso CSS</a></li>
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#"class="apartado">Contactenos</a>
+                    <a href="#"class="apartado">Contactenos <i class="fas fa-angle-double-right"></i></a>
                     <ul class="sub-nav-menu">
                         <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link">WhatsApp</a></li>
                         <li><a href="no disponible.html"target="_blank"class="sub-link">FaceBook</a></li>
