--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </ul>
                 </li>
                 <li>
-                    <!-- <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a> -->
+                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
                 </li>
             </ul>
             <ul>
@@ -88,10 +88,10 @@
                         <li>
                             <a href="https://youtube.com/playlist?list=PLbq9E5vE0hkThKFzEiHkpeelgQEF2YpH7"target="blank"rel="noreferrer noopener"class="link-extenser"> lista de reproducción programación</a> 
                         </li>
-                        <li>
-                            <!--<a height="#"class="link-extenser">descarga este proyecto</a>
-                        </li>-->
-                        </ul>
+                        <!-- <li>
+                            a height="#"class="link-extenser">descarga este proyecto</a>
+                        </li> -->
+                    </ul>
                     <hr>
                 </address>
             </article>
