--- a/capacitacion.html
+++ b/capacitacion.html
@@ -8,6 +8,9 @@
         <meta name="author" content= "Santiago Rodriguez Cubides">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <style>
+            .menu-img{
+                width: 20px;
+            }
         </style>
         <!--FONT AWESONE-->
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -30,17 +33,17 @@
                 <li>
                     <a href="#"class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
                     <ul class="sub-nav-menu">
-                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeB92ME1GFyeqDVOa-gL0Ybd"target="blank">Curso HTML</a></li>
-                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeDbvISffzihyxzqJBt_z3-Z"target="blank">Curso CSS</a></li>
-                            <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeBAnmi0rqLkyZIAVmT5lZxG"target="blank">Curso JavaScrip</a></li>
-                    </ul>
+                        <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeB92ME1GFyeqDVOa-gL0Ybd"target="blank"><img src="img/html_icon.png" alt="Logo menu"class="menu-img">Curso HTML</a></li>
+                        <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeDbvISffzihyxzqJBt_z3-Z"target="blank"><img src="img/css_icon.png" alt="Logo menu"class="menu-img">Curso CSS</a></li>
+                        <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeBAnmi0rqLkyZIAVmT5lZxG"target="blank"><img src="img/js_icon.png" alt="Logo menu"class="menu-img">Curso JS</a></li>
+                </ul>
                 </li>
                 <li>
                     <a href="#"class="apartado">Contactenos <i class="fas fa-angle-double-right"></i></a>
                     <ul class="sub-nav-menu">
-                        <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link">WhatsApp</a></li>
-                        <li><a href="no disponible.html"target="_blank"class="sub-link">FaceBook</a></li>
-                        <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link">Correo</a></li>
+                        <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link"><img src="img/wa_icon-png.png" alt="Logo menu"class="menu-img"> WhatsApp</a></li>
+                        <li><a href="no disponible.html"target="_blank"class="sub-link"><img src="img/fb_icon.png"alt="Logo menu"class="menu-img">FaceBook</a></li>
+                        <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link"><img src="img/gmail_icon.png" alt="Logo menu"class="menu-img"> Correo</a></li>
                     </ul>
                     
                 </li>
