--- a/capacitacion.html
+++ b/capacitacion.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Pagina web de Santiago Rodriguez Cubides 1102</title>
+        <title>SantiagoRC 1102</title>
         <meta charset="UTF-8">
         <meta name="description" content="Queremos que los colombianos conozcan a los candidatos por la camara del cenado y presidencia">
         <meta name="author" content= "Santiago Rodriguez Cubides">
