--- a/capacitacion.html
+++ b/capacitacion.html
@@ -27,9 +27,7 @@
         <nav class="nav-web">
             <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
             <ul class="nav-menu">
-                <li>
-                    <a href="http://www.santiago1102.ml">Principal</a>
-                </li>
+                <li><a href="http://www.santiago1102.ml">Principal</a></li>
                 <li>
                     <a href="#"class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
                     <ul class="sub-nav-menu">
@@ -47,17 +45,9 @@
                     </ul>
                     
                 </li>
-                <li>
-                    <a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a>
-                </li>
+                <li><a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a></li>
             </ul>
-            <ul>
-                <li>
-                    <a href="#">
-                        <i class="fas fa-search"></i>
-                    </a>
-                </li>
-            </ul>
+            <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul>
         </nav>
         <hr>
     </body>
