--- a/capacitacion.html
+++ b/capacitacion.html
@@ -15,14 +15,12 @@
         <!--FONT AWESONE-->
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <!--CUSTOM STYLES-->
-        <link rel="stylesheet" href="css/universal.css">
-        <link rel="stylesheet" href="#">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="">
     </head>
     <body class="pagina">
         <header id="Encabezado">
-            <h1>
-                <div align="center"class="titulo">Capacitación</div> 
-            </h1>
+            <h1><div align="center"class="titulo">Capacitación</div> </h1>
         </header>
         <nav class="nav-web">
             <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
