--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--FONT AWESONE-->
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <!--CUSTOM STYLES-->
-        <link rel="stylesheet" href="css/universal.css">
+        <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body class="pagina">
