--- a/capacitacion.html
+++ b/capacitacion.html
@@ -43,7 +43,7 @@
                     </ul>
                     
                 </li>
-                <li><a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a></li>
+                <!-- <li><a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a></li> -->
             </ul>
             <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul>
         </nav>
