--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link"><img src="img/gmail_icon.png" alt="Logo menu"class="menu-img"> Correo</a></li>
                     </ul>
                 </li>
-                <li><a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a></li>
+                <!-- <li><a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a></li> -->
             </ul>
             <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul>
         </nav>
