--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>SantiagoRC 1102</title>
         <meta charset="UTF-8">
         <meta name="description" content="Queremos que los colombianos conozcan a los candidatos por la camara del cenado y presidencia">
+        <meta name="robots"content="index,follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content= "Santiago Rodriguez Cubides">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <style>
