--- a/capacitacion.html
+++ b/capacitacion.html
@@ -17,7 +17,7 @@
         <!--FONT AWESONE-->
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <!--CUSTOM STYLES-->
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="">
     </head>
     <body class="pagina">
@@ -40,7 +40,7 @@
                     <a href="#"class="apartado">Contactenos <i class="fas fa-angle-double-right"></i></a>
                     <ul class="sub-nav-menu">
                         <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link"><img src="img/wa_icon-png.png" alt="Logo menu"class="menu-img"> WhatsApp</a></li>
-                        <li><a href="no disponible.html"target="_blank"class="sub-link"><img src="img/fb_icon.png"alt="Logo menu"class="menu-img">FaceBook</a></li>
+                        <li><a href="no-disponible.html"target="_blank"class="sub-link"><img src="img/fb_icon.png"alt="Logo menu"class="menu-img">FaceBook</a></li>
                         <li><a href="mailto:onesantiro360.negocios@gmai.com"target="_blank"class="sub-link"><img src="img/gmail_icon.png" alt="Logo menu"class="menu-img"> Correo</a></li>
                     </ul>
                     
