--- a/no-disponible.html
+++ b/no-disponible.html
@@ -12,7 +12,7 @@
         <!--FONT AWESONE-->
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <!--CUSTOM STYLES-->
-        <link rel="stylesheet" href="css/universal.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/no-disponible.css">
     </head>
     <body class="pagina">
