--- a/no-disponible.html
+++ b/no-disponible.html
@@ -1,22 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <title>Pagina web de Santiago Rodriguez Cubides 1102</title>
-        <meta charset="UTF-8">
-        <meta name="description" content="Queremos que los colombianos conozcan a los candidatos por la camara del cenado y presidencia">
-        <meta name="author" content= "Santiago Rodriguez Cubides">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <style>
-        </style>
-        <!--FONT AWESONE-->
-        <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-        <!--CUSTOM STYLES-->
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="css/no-disponible.css">
-    </head>
     <body class="pagina">
-        <div class="error">
+        <main class="error">
             <div class="contant">
                 <h1>Error</h1>
                 <p>
@@ -25,5 +10,6 @@
                 <p>Por favor Ir a la pagina principal hasta que solucionemos este problema</p>
                 <a href="http://www.santiago1102.ml"id="Redirigir">Click Aquí</a>
             </div>
-        </div>
+        </main>
     </body>
+</html>
