--- a/capacitacion.html
+++ b/capacitacion.html
@@ -10,6 +10,9 @@
         <meta name="author" content= "Santiago Rodriguez Cubides">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <style>
+            .menu-img{
+                width: 20px;
+            }
         </style>
         <!--FONT AWESONE-->
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
