--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="img/html+css+js.jpg"width="600"height="375"class="img-head"/>
                 <img src="img/Screenshot_142.png"width="600"height="375"class="img-head"/>
                 <img src="img/Screenshot_145.png"width="600"height="375"class="img-head"/>
-                <a href="#"class="link-extenser">aprende mas <i class="fas fa-angle-double-right"></i></a>
+                <a href="https://ar.pinterest.com/breenaap/humor-programador/"class="link-extenser"target="_blank">aprende mas <i class="fas fa-angle-double-right"></i></a>
             </article>
             <article class="one-article">
                 <hgroup>
