--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <nav class="nav-web">
                 <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
                 <ul class="nav-menu">
-                    <li><a href="capacitacion.html">Capacitación</a></li>
+                    <li><a href="practica.html">Practica</a></li>
                     <li>
                         <a href=""class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
                         <ul class="sub-nav-menu">
