--- a/practica.html
+++ b/practica.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <!--CUSTOM STYLES-->
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/practica.css">
     </head>
     <body class="pagina">
         <header id="Encabezado">
@@ -27,7 +27,7 @@
         <nav class="nav-web">
             <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
             <ul class="nav-menu">
-                <li><a href="http://www.santiago1102.ml">Principal</a></li>
+                <li><a href="index.html">Principal</a></li>
                 <li>
                     <a href="#"class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
                     <ul class="sub-nav-menu">
@@ -50,5 +50,13 @@
             <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul>
         </nav>
         <hr>
+        <main>
+            <article>
+                <h1 id="Titular">Video en la red por YouTube</h1>
+                <p>en esta parte del video</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RYRwOdS825o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <!-- <embed src="pdf/practica.pdf" type="application/pdf"width="400"height="640"> -->
+            </article>
+        </main>
     </body>
 </html>
