--- a/practica.html
+++ b/practica.html
@@ -27,7 +27,7 @@
         <nav class="nav-web">
             <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
             <ul class="nav-menu">
-                <li><a href="index.html">Principal</a></li>
+                <li><a href="http://www.santiago1102.ml">Principal</a></li>
                 <li>
                     <a href="#"class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
                     <ul class="sub-nav-menu">
