--- a/practica.html
+++ b/practica.html
@@ -25,6 +25,10 @@
             <h1><div align="center"class="titulo">Capacitación</div> </h1>
         </header>
         <nav class="nav-web">
+            <input type="checkbox"id="check">
+            <label for="check"class="checkbtn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
             <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
             <ul class="nav-menu">
                 <li><a href="http://www.santiago1102.ml">Principal</a></li>
