--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
             </h1>
             <nav class="nav-web">
                 <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
+                <button class="open-menu"aria-label="Abrir menu">
+                    <img src="icons/hamburger-icon.svg" alt="Abrir Menú">
+                </button>
                 <ul class="nav-menu">
+                    <button class="close-menu"aria-label="Cerrar Menú">
+                        <img src="icons/hamburger-icon.svg" alt="Cerrar Menú">
+                    </button>
                     <li><a href="practica.html">Practica</a></li>
                     <li>
                         <a href=""class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
@@ -49,7 +55,7 @@
                     </li>
                     <li><a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a></li>
                 </ul>
-                <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul>
+                <!-- <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul> -->
             </nav>
         </header>
         <hr>
@@ -65,7 +71,7 @@
                 <img src="img/html+css+js.jpg"width="600"height="375"class="img-head"/>
                 <img src="img/Screenshot_142.png"width="600"height="375"class="img-head"/>
                 <img src="img/Screenshot_145.png"width="600"height="375"class="img-head"/>
-                <a href="https://ar.pinterest.com/breenaap/humor-programador/"class="link-extenser"target="_blank">aprende mas <i class="fas fa-angle-double-right"></i></a>
+                <a href="https://ar.pinterest.com/breenaap/humor-programador/"class="link-extenser"target="_blank">Más memes<i class="fas fa-angle-double-right"></i></a>
             </article>
             <article class="one-article">
                 <hgroup>
