--- a/practica.html
+++ b/practica.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>SantiagoRC 1102</title>
+        <title>Practica</title>
         <meta charset="UTF-8">
         <meta name="description" content="Queremos que los colombianos conozcan a los candidatos por la camara del cenado y presidencia">
         <meta name="robots"content="index,follow">
@@ -58,7 +58,7 @@
                 </li>
                 <li><a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a></li>
             </ul>
-            <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul>
+            <!-- <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul> -->
         </nav>
         <hr>
         <main>
