--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     similique modi repellat eveniet suscipit obcaecati molestiae ipsam facere aperiam quam dolores, esse consectetur porro sint. 
                     Eos, rerum est consequuntur doloribus vitae optio officia consequatur dignissimos aut, qui perferendis fugit?
                 <p>
-                <video src="videos/el cerebro es matemático.mp4"width="400"height="640"controls></video>
+                <video src="videos/el cerebro es matemático.mp4"width="400"height="640"controls class="video"></video>
                 <h2>Lorem, ipsum.</h2>
                 <address class="link-programation">
                     <ul>
