--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 </button>
                 <ul class="nav-menu">
                     <button class="close-menu"aria-label="Cerrar Menú">
-                        <img src="icons/hamburger-icon.svg" alt="Cerrar Menú">
+                        <img src="icons/close-icon.svg" alt="Cerrar Menú">
                     </button>
                     <li><a href="practica.html">Practica</a></li>
                     <li>
-                        <a href=""class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
+                        <a class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
                         <ul class="sub-nav-menu">
                                 <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeB92ME1GFyeqDVOa-gL0Ybd"target="blank"><img src="img/html_icon.png" alt="Logo menu"class="menu-img">Curso HTML</a></li>
                                 <li><a href="https://youtube.com/playlist?list=PLROIqh_5RZeDbvISffzihyxzqJBt_z3-Z"target="blank"><img src="img/css_icon.png" alt="Logo menu"class="menu-img">Curso CSS</a></li>
@@ -46,7 +46,7 @@
                     </li>
                     <li><a href="#2-time">Otro apartado</a></li>
                     <li>
-                        <a href=""class="apartado">Contactenos <i class="fas fa-angle-double-right"></i></a>
+                        <a class="apartado">Contactenos <i class="fas fa-angle-double-right"></i></a>
                         <ul class="sub-nav-menu">
                             <li><a href="https://wa.me/message/L3MHL7NPXSIQI1"target="_blank"class="sub-link"><img src="img/wa_icon-png.png" alt="Logo menu"class="menu-img"> WhatsApp</a></li>
                             <li><a href="no-disponible.html"target="_blank"class="sub-link"><img src="img/fb_icon.png"alt="Logo menu"class="menu-img">FaceBook</a></li>
