--- a/practica.html
+++ b/practica.html
@@ -23,6 +23,7 @@
         <!--CUSTOM STYLES-->
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/practica.css">
+        <link rel="stylesheet" href="css/responsive.css">
         <script defer src="js/main.js"></script>
     </head>
     <body class="pagina">
