--- a/practica.html
+++ b/practica.html
@@ -27,18 +27,15 @@
         <script defer src="js/main.js"></script>
     </head>
     <body class="pagina">
-        <header id="Encabezado">
-            <h1><div align="center"class="titulo">Capacitación</div> </h1>
-        </header>
+        <div class="menu-btn">
+            <i class="fas fa-bars fa-2x"></i>
+        </div>
         <nav class="nav-web">
-            <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img"width="50">
-            <button class="open-menu"aria-label="Abrir menu">
-                <img src="icons/hamburger-icon.svg" alt="Abrir Menú">
-            </button>
+            <div class="inin">
+                <img src="img/logo OneSantiro350.png"alt="Logo web"class="nav-img">
+                <h1 class="titulo">Capacitación</h1>
+            </div>
             <ul class="nav-menu">
-                <button class="close-menu"aria-label="Cerrar Menú">
-                        <img src="icons/close-icon.svg" alt="Cerrar Menú">
-                </button>
                 <li><a href="index.html">Principal</a></li>
                 <li>
                     <a class="apartado">Cursos de programación <i class="fas fa-angle-double-right"></i></a>
@@ -59,7 +56,7 @@
                 </li>
                 <li><a href="https://github.com/OneSantiro360/OneSantiro360SRC/archive/refs/heads/main.zip"target=""class="sub-link">Descarga esta Web</a></li>
             </ul>
-            <!-- <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul> -->
+            <ul><li><a href="#"><i class="fas fa-search"></i></a></li></ul>
         </nav>
         <hr>
         <main>
